K8s-canvass-ingress/02-Ingress-ClusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-clusterip-service
  labels:
    app: myapp1
spec:
  type: ClusterIP
  selector:
    app: myapp1
  ports:
    - port: 80
      targetPort: 8080
